Change in title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Augustus Healthcare Solutions LLC | New Perspectives. Global Success.</title>
+    <title>Dynamic IT Healthcare | New Perspectives. Global Success.</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="ThemeZaa">
@@ -33,9 +33,9 @@
     <div class="container-fluid">
         <div class="col-auto me-lg-0 me-auto">
             <a class="navbar-brand" href="Home.html">
-                <img src="Images/logo.jpg" alt="Augustus Health Care Solutions" class="default-logo" style="min-height: 75px">
-                <img src="Images/logo.jpg" alt="Augustus Health Care Solutions" class="alt-logo" style="min-height: 50px">
-                <img src="Images/logo.jpg" alt="Augustus Health Care Solutions" class="mobile-logo" style="min-height: 50px">>
+                <img src="Images/logo.jpg" alt="Dynamic IT Healthcare" class="default-logo" style="min-height: 75px">
+                <img src="Images/logo.jpg" alt="Dynamic IT Healthcare" class="alt-logo" style="min-height: 50px">
+                <img src="Images/logo.jpg" alt="Dynamic IT Healthcare" class="mobile-logo" style="min-height: 50px">>
             </a>
         </div>
         <div class="col-auto menu-order position-static">
