--- a/index.html
+++ b/index.html
@@ -123,28 +123,6 @@
                     </div>
                     <div class="col-auto col-xl-3 col-lg-2 text-end md-pe-0">
                         <div class="header-icon">
-                            <div class="header-search-icon icon">
-                                <a href="#" class="search-form-icon header-search-form"><i
-                                        class="feather icon-feather-search"></i></a>
-                                <!-- start search input -->
-                                <div class="search-form-wrapper">
-                                    <button title="Close" type="button" class="search-close">×</button>
-                                    <form id="search-form" role="search" method="post" class="search-form text-left"
-                                        action="/Search/Results">
-                                        <div class="search-form-box">
-                                            <h2 class="text-dark-gray text-center fw-600 mb-4 ls-minus-1px">What are you
-                                                looking for?</h2>
-                                            <input class="search-input" id="SearchTerm"
-                                                placeholder="Enter your keywords..." name="SearchTerm" value=""
-                                                type="text" autocomplete="off">
-                                            <button type="submit" class="search-button">
-                                                <i class="feather icon-feather-search" aria-hidden="true"></i>
-                                            </button>
-                                        </div>
-                                    </form>
-                                </div>
-                                <!-- end search input -->
-                            </div>
                             <div class="header-button ms-20px d-none d-xl-inline-block">
                                 <a href="Home/Contact.html"
                                     class="btn btn-rounded btn-transparent-light-gray border-1 btn-medium btn-switch-text text-transform-none">
@@ -2098,7 +2076,7 @@
                 isValid = false;
             } else Toggle(email, true);
 
-            if (!siteValid || siteValid.val() === '' || siteValid.val().toLowerCase() !== 'dynamic') {
+            if (!siteValid || siteValid.val() === '' || siteValid.val().toLowerCase() !== 'dynamicit') {
                 Toggle(siteValid, false);
                 isValid = false;
             } else Toggle(siteValid, true);
