Removed API Calls to google and reCaptcha

--- a/Home/PrivacyPolicy.html
+++ b/Home/PrivacyPolicy.html
@@ -181,8 +181,9 @@
                                 committed to protecting your privacy through the Company’s compliance with this policy.
                             </p>
                             <p>This policy describes the types of information the Company may collect from you or that
-                                you may provide when you visit our website, <a href="https://www.DynamicITHealthcare.com"
-                                    target="_blank" rel="noreferrer">www.DynamicITHealthcare.com</a>, or other sites referencing
+                                you may provide when you visit our website, <a
+                                    href="https://www.DynamicITHealthcare.com" target="_blank"
+                                    rel="noreferrer">www.DynamicITHealthcare.com</a>, or other sites referencing
                                 this policy (individually and collectively, the “Website”), and the Company’s practices
                                 for collecting, using, maintaining, protecting, and disclosing that information.</p>
                             <p>This policy applies to information the Company collects on the Website and in electronic
@@ -367,7 +368,8 @@
                             <!-- Heading -->
                             <h3 class="mb-4">Contact Information</h3>
                             <p>To ask questions or comment or if you wish to exercise any of your rights, contact the
-                                Company at <a href="mailto:info@DynamicITHealthcare.com">info@DynamicITHealthcare.com</a><br></p>
+                                Company at <a
+                                    href="mailto:info@DynamicITHealthcare.com">info@DynamicITHealthcare.com</a><br></p>
                         </div>
                         <div class="pb-5 mb-5 border-bottom">
                             <!-- Heading -->
@@ -482,8 +484,8 @@
                         <!-- start footer column -->
                         <div
                             class="col-6 col-xl-3 col-lg-12 col-sm-6 last-paragraph-no-margin text-xl-start text-lg-center order-sm-1 lg-mb-50px sm-mb-30px">
-                            <a href="../Home.html" class="footer-logo mb-15px d-inline-block"><img src="../Images/logo.jpg"
-                                    alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
+                            <a href="../Home.html" class="footer-logo mb-15px d-inline-block"><img
+                                    src="../Images/logo.jpg" alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
                             <p class="lh-30 w-100 xl-w-100 mx-lg-auto mx-xl-0">New Perspectives. Global Success.</p>
                             <div class="elements-social social-icon-style-02 mt-20px xs-mt-15px">
                                 <ul class="medium-icon dark">
@@ -814,18 +816,6 @@
             else
                 $('#ResumeModalSubmitButton').prop('disabled', true);
         }
-    </script>
-
-    <script src="../recaptcha/api.js"></script>
-
-    <!-- Google tag (gtag.js) -->
-    <script async="" src="../gtag/js?id=G-WVERS5XPZW"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-WVERS5XPZW');
     </script>
 </body>
 
