change in image

--- a/Home.html
+++ b/Home.html
@@ -1741,7 +1741,7 @@
                         <!-- start client item -->
                         <div class="col client-box text-center md-mb-40px">
                             <a href="https://dynamicithealthcare.com/" target="_blank" rel="noopener noreferrer"><img
-                                    src="Images/partners-01.png" class="h-45px" alt=""></a>
+                                    src="Images/logo.jpg" class="h-45px" alt=""></a>
                         </div>
                         <!-- end client item -->
                         <!-- start client item -->
