--- a/Home/WhatMakesUsUnique.html
+++ b/Home/WhatMakesUsUnique.html
@@ -55,7 +55,7 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="WhyChooseUs.html" class="nav-link">Why Choose Us?</a></li>
+                                <li class="nav-item"><a href="WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
@@ -154,7 +154,7 @@
                     <div class="row align-items-center justify-content-center small-screen">
                         <div class="col-lg-8 position-relative text-center page-title-extra-large"
                             data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h1 class="m-auto text-white text-shadow-double-large fw-600 ls-minus-2px">Why choose us?
+                            <h1 class="m-auto text-white text-shadow-double-large fw-600 ls-minus-2px">What Makes Us Unique
                             </h1>
                         </div>
                         <div class="down-section text-center"
