--- a/LaboratoryServices/InstrumentServicesSupplies.html
+++ b/LaboratoryServices/InstrumentServicesSupplies.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -216,15 +216,11 @@
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Maintaining High Standards of
-                                Accuracy, Efficiency, and Compliance</h5>
-                            <p>Equipping a clinical laboratory with the right instruments and supplies is crucial for
-                                its effective operation. By utilizing comprehensive instrument and supplies services,
-                                clinical laboratories can maintain high standards of accuracy, efficiency, and
-                                compliance, ensuring smooth and effective operation.</p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Upholding Exceptional Standards of Accuracy, Efficiency, and Compliance</h5>
+<p>Equipping a clinical laboratory with the appropriate tools and resources is essential for its optimal performance. By leveraging comprehensive instrument and supply management services, clinical labs can uphold high standards of accuracy, efficiency, and compliance, ensuring smooth and effective operations.</p>
 
-                            <p>Here's a detailed guide to the services typically offered for instrument and supply
-                                management in a clinical laboratory by Dynamic IT Healthcare:</p>
+<p>Below is an in-depth overview of the services commonly provided for instrument and supply management in clinical laboratories by Dynamic IT Healthcare:</p>
+
 
                             <div
                                 class="overflow-hidden position-relative border-radius-6px lg-border-radius-0px z-index-0">
@@ -690,31 +686,26 @@
                                 <div class="card collapse show border-0" id="instrument-01"
                                     data-bs-parent="#instrument">
                                     <div class="card-header">
-                                        <span class="fw-600 fs-18">Instrument Selection and Procurement</span>
+                                        <span class="fw-600 fs-18">Equipment Selection and Acquisition</span>
                                     </div>
                                     <div class="card-body">
-                                        <em><u>Needs Assessment</u></em>
+                                        <em><u>Requirement Analysis</u></em>
                                         <ol>
-                                            <li><strong>Evaluation</strong>: Assess the specific needs of the laboratory
-                                                based on the types of tests performed.</li>
-                                            <li><strong>Budget Planning</strong>: Determine budget constraints and
-                                                prioritize essential instruments.</li>
+                                            <li><strong>Evaluation</strong>: Assess the laboratory's specific requirements based on the types of tests conducted.</li>
+                                            <li><strong>Budget Planning</strong>: Establish budget limits and prioritize the most critical instruments.</li>
                                         </ol>
-                                        <em><u>Vendor Selection</u></em>
+                                        <em><u>Supplier Selection</u></em>
                                         <ol>
-                                            <li><strong>Research</strong>: Identify reputable vendors and manufacturers.
-                                            </li>
-                                            <li><strong>Comparison</strong>: Compare features, prices, and warranties of
-                                                different instruments.</li>
+                                            <li><strong>Research</strong>: Identify reliable vendors and manufacturers.</li>
+                                            <li><strong>Comparison</strong>: Compare the features, prices, and warranties of various instruments.</li>
                                         </ol>
-                                        <em><u>Procurement</u></em>
+                                        <em><u>Acquisition</u></em>
                                         <ol>
-                                            <li><strong>Negotiation</strong>: Negotiate contracts and prices with
-                                                vendors.</li>
-                                            <li><strong>Ordering</strong>: Place orders and ensure timely delivery of
-                                                instruments.</li>
+                                            <li><strong>Negotiation</strong>: Negotiate terms and prices with suppliers.</li>
+                                            <li><strong>Ordering</strong>: Place orders and ensure the timely delivery of instruments.</li>
                                         </ol>
                                     </div>
+                                    
                                 </div>
 
                                 <div class="card collapse border-0" id="instrument-02" data-bs-parent="#instrument">
