--- a/PayerSolutions.html
+++ b/PayerSolutions.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -209,34 +209,14 @@
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Cost-Effective and Reliable
-                                Claims Administration Services for Health Insurance Companies</h5>
-                            <p>A surge in healthcare enrollment has occurred due to the Affordable Care Act. This has
-                                caused an increase in both high-risk consumers and an aging healthcare population. As a
-                                result, payers must process more claims than ever before. By aligning payers and service
-                                providers, Dynamic IT Healthcare helps ensure smoother claims processing and a reduction
-                                in
-                                overall operating costs.</p>
+                           <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Affordable and Dependable Claims Management Solutions for Health Insurance Providers</h5>
+<p>The Affordable Care Act has led to a significant increase in healthcare enrollment, resulting in a rise in both high-risk consumers and an aging population. Consequently, payers are faced with processing more claims than ever before. By aligning payers with service providers, Dynamic IT Healthcare helps streamline the claims process, ultimately reducing overall operational costs.</p>
 
-                            <p>In an evolving and ever-changing healthcare industry, Dynamic IT Healthcare provides
-                                payers with
-                                more strategic choices for greater competitiveness. Dynamic IT Healthcare helps insurers
-                                meet the
-                                demand for special skills, increase speed to market for extended offerings, and trim
-                                administrative costs. Dynamic IT Healthcare also helps raise accuracy in adjudicating
-                                claims and
-                                the exchange of information throughout your organization.</p>
+<p>In today’s dynamic and constantly evolving healthcare sector, Dynamic IT Healthcare empowers payers with strategic options to stay competitive. Our services enable insurers to meet the growing demand for specialized skills, accelerate time-to-market for new offerings, and reduce administrative expenses. Additionally, Dynamic IT Healthcare improves claim adjudication accuracy and enhances information exchange throughout your organization.</p>
 
-                            <p>Dynamic IT Healthcare offers services in configuration, front-end, claims administration
-                                and
-                                adjudication, enrollment and billing. With easy adaptable delivery models, payers use
-                                Dynamic IT Healthcare’s value add services either continuously or on demand by working
-                                with
-                                onsite and/or offshore professionals.</p>
+<p>Dynamic IT Healthcare delivers a comprehensive range of services, including configuration, front-end claims administration, adjudication, enrollment, and billing. With flexible and adaptable service delivery models, payers can utilize Dynamic IT Healthcare’s value-added services on an ongoing or as-needed basis, leveraging both on-site and offshore professionals.</p>
 
-                            <em class="fw-700 alt-font mb-20px d-block text-green text-decoration-underline">Many of our
-                                clients have achieved cost reductions of as much as 30% in process related services and
-                                10% in overall administrative services.</em>
+<em class="fw-700 alt-font mb-20px d-block text-green text-decoration-underline">Several of our clients have realized cost savings of up to 30% in process-related services and 10% in overall administrative services.</em>
 
 
                             <div class="row align-items-center justify-content-center g-0">
