--- a/ProviderServices.html
+++ b/ProviderServices.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -218,34 +218,20 @@
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                             <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">
-                                Value Care Documentation Services Vs. Volume Care Payments
-                            </h5>
-                            <p>Medicare and payer payments to providers are driven by the value providers add to patient
-                                care and not by the volume of patients they encounter.</p>
+    Value-Based Care Documentation Services vs. Volume-Based Care Payments
+</h5>
+<p>Medicare and insurer payments to healthcare providers are determined by the value they contribute to patient care, rather than the number of patients they treat.</p>
 
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Clinical Documentation
-                                Improvement (CDI) Services</h5>
-                            <p>Clinical notes/charts made by providers drive the medical coding process. Our highly
-                                trained staff review the documentation to substantiate the medical necessity for
-                                procedures to seek legitimate payment. This review enhances reimbursement from the
-                                payers as well as avoids recoupments, penalties, and sanctions by Recovery Audit
-                                Contractor (RAC)/ Zone Program Integrity Contractor (ZPIC).</p>
+<h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Clinical Documentation Improvement (CDI) Services</h5>
+<p>The clinical notes and charts created by healthcare providers form the basis of the medical coding process. Our skilled team reviews this documentation to confirm the medical necessity of procedures, ensuring legitimate reimbursement. This review not only improves payer reimbursements but also helps prevent recoupments, penalties, and sanctions from Recovery Audit Contractors (RAC) and Zone Program Integrity Contractors (ZPIC).</p>
 
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">
-                                We supply the following services to help providers remain compliant
-                            </h5>
-                            <p>Star ratings and quality data submission mandates such as: Physician Quality Reporting
-                                System (PQRS), Meaningful Use (MU) - Electronic Health Records (EHR) Stage-II, Value
-                                Based Modifier, and Medicare Access and CHIP Reauthorization Act (MACRA) - Merit-Based
-                                Incentive Payment System (MIPS). These offerings are the new standards for providers to
-                                remain compliant in the industry. We help providers navigate these crucial areas to
-                                assure compliance and timely payment.</p>
+<h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">
+    We Offer the Following Services to Ensure Providers Stay Compliant
+</h5>
+<p>We assist with mandates for star ratings and quality data submission, including Physician Quality Reporting System (PQRS), Meaningful Use (MU) - Electronic Health Records (EHR) Stage-II, Value-Based Modifier, and Medicare Access and CHIP Reauthorization Act (MACRA) - Merit-Based Incentive Payment System (MIPS). These are essential standards for providers to maintain compliance in the industry, and we guide providers through these critical areas to ensure compliance and prompt payment.</p>
 
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Leveraging Expertise, Advanced
-                                Technology, and Scalable Solutions</h5>
-                            <p>Dynamic IT Healthcare understands that Revenue Cycle Management (RCM) in medical billing
-                                is a critical process that healthcare organizations use to manage the financial aspects
-                                of patient care.</p>
+<h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Utilizing Expertise, Cutting-Edge Technology, and Scalable Solutions</h5>
+<p>Dynamic IT Healthcare recognizes that Revenue Cycle Management (RCM) in medical billing is a vital process for healthcare organizations to effectively manage the financial aspects of patient care.</p>
 
                             <div class="row align-items-center justify-content-center g-0">
                                 <div class="col-12 d-block d-sm-flex align-items-center text-center text-sm-start">
