--- a/PayerSolutions/FormConversion.html
+++ b/PayerSolutions/FormConversion.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -206,18 +206,10 @@
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">High Efficiency Key From Image
-                                (KFI) Functions </h5>
-                            <p>This is a necessary basic service for all claims processing centers such as third-party
-                                administrator (TPA)/Clearing Houses/Adjudication centers. In our experience providers
-                                typically send their handwritten claims to processing centers which can’t be processed
-                                through auto adjudication software unless they are converted into electronic versions.
-                            </p>
-                            <p>Our experienced data entry operators are proficient in achieving high efficiency in Key
-                                From Image (KFI) functions with 99.5% accuracy and average productivity of 250 forms per
-                                eight hour shift. We also provide mailbox function services to help our clients collect
-                                handwritten forms through courier services to complete the scanning process in our
-                                facility.</p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Key for Optimal Performance From Image (KFI) Services</h5>
+<p>This is a crucial service for all claims processing hubs, including third-party administrators (TPA), Clearing Houses, and Adjudication centers. From our experience, providers often submit their handwritten claims to processing centers, which cannot be processed using auto adjudication software unless they are converted into digital formats.</p>
+<p>Our proficient data entry operators excel in performing Key From Image (KFI) tasks with 99.5% accuracy, averaging 250 forms per eight-hour shift. We also offer mailbox services to support our clients in gathering handwritten forms through courier, allowing us to finalize the scanning process at our facility.</p>
+
                         </div>
                     </div>
                 </div>
