--- a/PayerSolutions/MAO.html
+++ b/PayerSolutions/MAO.html
@@ -199,8 +199,7 @@
                                     a free consultation</span>
                                 <div class="contact-form-style-01 mt-0">
                                     <a href="../Home/Contact.html"
-                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Send
-                                        message</a>
+                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Drop a message</a>
                                 </div>
                             </div>
                         </div>
