--- a/ProviderServices/BehavioralHealthBilling.html
+++ b/ProviderServices/BehavioralHealthBilling.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -205,89 +205,65 @@
                                     a free consultation</span>
                                 <div class="contact-form-style-01 mt-0">
                                     <a href="../Home/Contact.html"
-                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Send
-                                        message</a>
+                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Drop a message</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
-                            data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">
-                                Assuring Accurate and Timely Reimbursements = Reduced Administrative Burdens
-                            </h5>
-                            <p>
-                                Dynamic IT Healthcare Behavioral health billing services cater specifically to the
-                                unique needs and complexities associated with billing for mental health and substance
-                                abuse treatments.
-                            </p>
-                            <p>
-                                Behavioral health billing services are essential for mental health and substance abuse
-                                providers seeking to streamline their revenue cycle, enhance compliance, and focus on
-                                patient care. By leveraging Dynamic IT Healthcares’ specialized expertise, advanced technology, and
-                                efficient processes, healthcare providers will have assurance of accurate and timely
-                                reimbursements while reducing the administrative burden.
-                            </p>
-                            <p>
-                                Behavioral health billing is a challenging process often involving complex coding
-                                requirements. It is undeniable that mental health claims frequently face higher denial
-                                rates due to documentation issues or incorrect coding. Regulatory compliance and patient
-                                privacy are main concerns. By utilizing Dynamic IT Healthcare's Behavioral Health Billing services, you
-                                can experience numerous benefits. Some of these include:
-                            </p>
-                            <span class="d-block fw-700 text-dark-gray mb-5px fs-18">
-                                Benefits of Behavioral Health Billing Services:
-                            </span>
-                            <ul>
-                                <li>
-                                    <span class="fa fa-lightbulb text-green"></span> <strong>Specialized
-                                        Expertise</strong>
-                                    <ul>
-                                        <li>
-                                            Dynamic IT Healthcare Behavioral health billing services employees have expertise and
-                                            specialized knowledge in the nuances of mental health and substance abuse
-                                            billing, ensuring accuracy and compliance.
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <span class="fa fa-refresh text-green"></span> <strong>Improved Revenue
-                                        Cycle</strong>
-                                    <ul>
-                                        <li>Efficient management of the entire billing process from insurance
-                                            verification to payment posting enhances cash flow and reduces financial
-                                            stress on the practice.</li>
-                                    </ul>
-                                </li>
-                                <li><span class="fa fa-user-group text-green"></span> <strong>Reduced Administrative
-                                        Burden</strong>
-                                    <ol>
-                                        <li>Outsourcing to Dynamic IT Healthcare will allow behavioral health providers to focus more on
-                                            patient care and less on administrative tasks.</li>
-                                    </ol>
-                                </li>
-                                <li><span class="fa fa-heartbeat text-green"></span> <strong>Enhanced Patient
-                                        Experience</strong>
-                                    <ul>
-                                        <li>Clear and accurate billing reduces patient confusion and disputes, leading
-                                            to a better overall patient experience.</li>
-                                    </ul>
-                                </li>
-                                <li><span class="fa fa-thumbs-up text-green"></span> <strong>Compliance
-                                        Assurance</strong>
-                                    <ul>
-                                        <li>Dynamic IT Healthcare will help you stay compliant with ever-changing healthcare regulations
-                                            and minimize the risk of audits and penalties.</li>
-                                    </ul>
-                                </li>
-                                <li><span class="fa fa-magnifying-glass-dollar text-green"></span> <strong>Cost
-                                        Efficiency</strong>
-                                    <ul>
-                                        <li>Reducing overhead costs associated with maintaining an in-house billing
-                                            department.</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
+                        data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
+                        <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">
+                            Ensuring Accurate and Timely Reimbursements = Lower Administrative Workload
+                        </h5>
+                        <p>
+                            Dynamic IT Healthcare’s Behavioral Health billing services are designed to address the unique needs and complexities of billing for mental health and substance abuse treatments.
+                        </p>
+                        <p>
+                            These billing services are vital for mental health and substance abuse providers aiming to streamline their revenue cycles, improve compliance, and focus on patient care. By leveraging Dynamic IT Healthcare’s specialized expertise, advanced technology, and efficient workflows, healthcare providers can ensure accurate and timely reimbursements while reducing administrative burdens.
+                        </p>
+                        <p>
+                            Behavioral health billing is a challenging process that often involves complex coding requirements. Mental health claims commonly experience higher denial rates due to documentation issues or improper coding. Regulatory compliance and patient privacy are key concerns. By utilizing Dynamic IT Healthcare's Behavioral Health Billing services, providers can enjoy several benefits, including:
+                        </p>
+                        <span class="d-block fw-700 text-dark-gray mb-5px fs-18">
+                            Advantages of Behavioral Health Billing Services:
+                        </span>
+                        <ul>
+                            <li>
+                                <span class="fa fa-lightbulb text-green"></span> <strong>Specialized Expertise</strong>
+                                <ul>
+                                    <li>
+                                        The team at Dynamic IT Healthcare has specialized knowledge and expertise in mental health and substance abuse billing, ensuring compliance and accuracy.
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <span class="fa fa-refresh text-green"></span> <strong>Enhanced Revenue Cycle</strong>
+                                <ul>
+                                    <li>Efficient management of the entire billing process, from insurance verification to payment posting, improves cash flow and reduces financial strain on the practice.</li>
+                                </ul>
+                            </li>
+                            <li><span class="fa fa-user-group text-green"></span> <strong>Reduced Administrative Load</strong>
+                                <ol>
+                                    <li>By outsourcing to Dynamic IT Healthcare, behavioral health providers can focus more on patient care and less on administrative responsibilities.</li>
+                                </ol>
+                            </li>
+                            <li><span class="fa fa-heartbeat text-green"></span> <strong>Improved Patient Experience</strong>
+                                <ul>
+                                    <li>Clear and accurate billing reduces confusion and disputes, enhancing the overall patient experience.</li>
+                                </ul>
+                            </li>
+                            <li><span class="fa fa-thumbs-up text-green"></span> <strong>Compliance Assurance</strong>
+                                <ul>
+                                    <li>Dynamic IT Healthcare helps ensure compliance with ever-evolving healthcare regulations and reduces the risk of audits and penalties.</li>
+                                </ul>
+                            </li>
+                            <li><span class="fa fa-magnifying-glass-dollar text-green"></span> <strong>Cost Efficiency</strong>
+                                <ul>
+                                    <li>Outsourcing helps minimize overhead costs related to running an in-house billing department.</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    
                     </div>
                 </div>
             </section>
